[gd_scene load_steps=6 format=3 uid="uid://ty7aw8t2okli"]

[ext_resource type="Script" path="res://scripts/grenade.gd" id="1_hdmlq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p5f04"]
albedo_color = Color(0.862087, 0.710594, 0.039148, 1)

[sub_resource type="SphereMesh" id="SphereMesh_csv2h"]
material = SubResource("StandardMaterial3D_p5f04")
radius = 0.1
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_1jw8u"]
radius = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_cvr1g"]
radius = 3.0

[node name="Grenade" type="RigidBody3D"]
script = ExtResource("1_hdmlq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_csv2h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_1jw8u")

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ExplosionArea" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplosionArea"]
shape = SubResource("SphereShape3D_cvr1g")

[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
